--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -14,6 +14,11 @@ on:
       - 'common/**'
       - 'pom.xml'
 
+permissions:
+  contents: read
+  packages: write
+  pull-requests: write
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: fabric-management/auth-service
@@ -50,12 +55,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Log in to Container Registry
+    - name: Login to GitHub Container Registry
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        password: ${{ secrets.GHCR_TOKEN }}
 
     - name: Extract metadata
       id: meta
